src/App.css
.Navbar {
  background-color: black;
  color: white;
  font-family: monospace;
  position: fixed;
  margin-top: 0px;
  z-index: 999;
  width: 100vw;
  height: auto;

}
.title {
  padding-left: 25px;
}

.image {
  margin-left: none;
  width: auto;
  height: 35vh;
  border: 5px solid black;
  border-radius: 25px
}
.topContainer {
  margin-top: 100px;
  position: absolute;
  padding: 10px;


}
.bio {
  margin-left: 3vw;
  align-items: center;
  border: 5px solid black;
  border-radius: 25px;
  padding: 10px;
  font-size: 15px;
  font-family: monospace;
  height: auto;
  width: 65vw;
  background-color: #ffffffa0;
}
.description {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-left: 3vw;
  border: 5px solid black;
  border-radius: 25px;
  padding: 10px;
  font-size: 15px;
  font-family: monospace;
  height: auto;
  width: 65vw;
  background-color: #ffffffa0;
}
.descriptionContainer {
  
  

  gap: 3px;
}

.projects {
  font-family: monospace;
  position: absolute;
  border: 5px solid black;
  width: 75vw;
  border-radius: 25px;
  font-family: monospace;
  padding: 5px;
  background-color: black;
  color: white;

}
.projectsContainer {
  margin-top: 20px;
  padding: 10px;
  position: absolute;



}

.projectPreview {
  height: auto;
  width: 25vw;
  padding: 10px;
}

.projectCard{
  border: 5px solid black;
  padding: 10px;
  border-radius: 25px;
  background: #ffffffa0;
  color: black;
}

.projectCards{
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

.viewButton {
  font-size: 25px;
  padding: 3px;
  border: 3px solid black;
  border-radius: 10px;
  background-color: black;
  color: white;
}

.Background {
  height: 100vh;
  width: 100vw;
  position: fixed;
  background-image: linear-gradient(#300030, #000000);
  z-index: -1;
}

